kubernetes/.archive/bytebase/app/default.http-route.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bytebase
spec:
  parentRefs:
    - name: cloudflare-tunnel
      sectionName: http
      namespace: gateway-api
  hostnames:
    - bytebase.${IDVN_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bytebase
          port: 8080
